# NFDRS4

./: .gitignore  .readthedocs.yaml  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  README.md
app/: CMakeLists.txt
app/FireWxConverter/: CMakeLists.txt
app/FireWxConverter/src/: FireWxConverter.cpp
app/NFDRS4_cli/: CMakeLists.txt  README.md
app/NFDRS4_cli/src/: CNFDRSParams.cpp  CNFDRSParams.h  NFDRSConfiguration.cpp  NFDRSConfiguration.h  NFDRSInitConfig.cpp  NFDRSInitConfig.h  RunNFDRS.cpp  RunNFDRSConfig.cpp  RunNFDRSConfig.h  RunNFDRSConfiguration.cpp  RunNFDRSConfiguration.h
data/: NFDRSInitSample.txt  RunNFDRSSample.txt
doc/: README.md
docs/: Doxyfile.in  Doxyfile.in.bak  conf.py  index.rst
docs/_build/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  _dead_fuel_moisture.html  class_c_fuel_model_params.html  class_d_f_m_calc_state.html  class_dead_fuel_moisture-members.html  class_dead_fuel_moisture.html  class_n_f_d_r_s4-members.html  class_n_f_d_r_s4.html  class_n_f_d_r_s4_state-members.html  deadfuelmoisture_8h.html  deadfuelmoisture_8h_source.html  deprecated.html  dfmcalcstate_8h_source.html  dir_1719a9ef0eb55c89bff64c6651790ea7.html  dir_4d11441c740e5289d0a205ec0d9afe23.html  dir_6e89bf1d9f2ec201c9c602639fb32b4d.html  doxygen_crawl.html  files.html  functions_func.html  genindex.html  globals.html  globals_defs.html  index.html  nfdrs4_8h_source.html  nfdrs4statesizes_8h_source.html  objects.inv  search.html  searchindex.js  todo.html
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/search/: all_10.js  all_13.js  all_14.js  all_15.js  all_16.js  all_18.js  all_2.js  all_3.js  all_4.js  all_6.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  defines_0.js  functions_3.js  functions_6.js  functions_8.js  functions_a.js  functions_c.js  functions_d.js  pages_0.js  pages_2.js  pages_7.js  variables_0.js
docs/_build/latex/: annotated.tex  class_c_fuel_model_params.tex  class_d_f_m_calc_state.tex  class_dead_fuel_moisture.tex  class_live_fuel_moisture.tex  class_n_f_d_r_s4.tex  deadfuelmoisture_8h.tex  deadfuelmoisture_8h_source.tex  dfmcalcstate_8h_source.tex  files.tex  lfmcalcstate_8h_source.tex  livefuelmoisture_8h_source.tex  nfdrs4_8h_source.tex
docs/_build/sphinx/: .buildinfo  index.html  objects.inv  searchindex.js
docs/_build/sphinx/.doctrees/: environment.pickle  index.doctree
docs/_build/xml/: Doxyfile.xml  _dead_fuel_moisture.xml  citations.xml  class_c_fuel_model_params.xml  class_live_fuel_moisture.xml  class_n_f_d_r_s4.xml  deadfuelmoisture_8cpp.xml  deadfuelmoisture_8h.xml  deprecated.xml  dfmcalcstate_8cpp.xml  index.xml  indexpage.xml  lfmcalcstate_8cpp.xml  livefuelmoisture_8cpp.xml  livefuelmoisture_8h.xml  nfdrs4_8cpp.xml  nfdrs4_8h.xml  nfdrs4calcstate_8cpp.xml  nfdrs4calcstate_8cpp_8obj_8d.xml  nfdrs4statesizes_8h.xml  todo.xml
docs/doc_out/html/: _formulas.tex  _formulas_dark.tex  annotated.html  citations.html  class_c_fuel_model_params-members.html  class_d_f_m_calc_state-members.html  class_l_f_m_calc_state-members.html  class_l_f_m_calc_state.html  class_live_fuel_moisture-members.html  class_live_fuel_moisture.html  class_n_f_d_r_s4-members.html  class_n_f_d_r_s4.html  class_n_f_d_r_s4_state.html  classes.html  deadfuelmoisture_8cpp.html  dir_2826ec08f5a914f71873cfe389ada39f.html  dir_6bc10491cf209866dee63be0e1ea0dff.html  dir_86d896f802cda5991ebae8024109ee05.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  functions.html  functions_vars.html  index.html  lfmcalcstate_8h_source.html  livefuelmoisture_8cpp.html  livefuelmoisture_8h_source.html  md__d_1_2_source_2_public_github_2_n_f_d_r_s4_2lib_2_r_e_a_d_m_e.html  menudata.js  nfdrs4_8h_source.html  nfdrs4calcstate_8h_source.html  pages.html
docs/doc_out/html/search/: all_0.js  (+30 more)
docs/doc_out/latex/: _dead_fuel_moisture.tex  citations.tex  class_l_f_m_calc_state.tex  class_n_f_d_r_s4_state.tex  deadfuelmoisture_8cpp.tex  deprecated.tex  index.tex  livefuelmoisture_8cpp.tex  md__d_1_2_source_2_public_github_2_n_f_d_r_s4_2lib_2_r_e_a_d_m_e.tex  nfdrs4_8h_source.tex  nfdrs4calcstate_8h_source.tex  nfdrs4statesizes_8h_source.tex  refman.tex  todo.tex
docs/doc_out/sphinx/: .buildinfo  search.html  searchindex.js
docs/doc_out/xml/: Doxyfile.xml  _r_e_a_d_m_e_8md.xml  class_d_f_m_calc_state.xml  class_dead_fuel_moisture.xml  class_l_f_m_calc_state.xml  class_n_f_d_r_s4.xml  class_n_f_d_r_s4_state.xml  conf_8py.xml  deadfuelmoisture_8cpp_8obj_8d.xml  dfmcalcstate_8cpp_8obj_8d.xml  dfmcalcstate_8h.xml  dir_1719a9ef0eb55c89bff64c6651790ea7.xml  dir_2826ec08f5a914f71873cfe389ada39f.xml  dir_4d11441c740e5289d0a205ec0d9afe23.xml  dir_6bc10491cf209866dee63be0e1ea0dff.xml  dir_6e89bf1d9f2ec201c9c602639fb32b4d.xml  dir_86d896f802cda5991ebae8024109ee05.xml  dir_97aefd0d527b934f1d99a682da8fe6a9.xml  lfmcalcstate_8cpp_8obj_8d.xml  lfmcalcstate_8h.xml  livefuelmoisture_8cpp_8obj_8d.xml  md__d_1_2_source_2_public_github_2_n_f_d_r_s4_2lib_2_r_e_a_d_m_e.xml  namespaceconf.xml  namespacestd.xml  namespaceutctime.xml  nfdrs4_8cpp.xml  nfdrs4_8cpp_8obj_8d.xml  nfdrs4calcstate_8h.xml
lib/: CMakeLists.txt  README.md
lib/NFDRS4/: CMakeLists.txt
lib/NFDRS4/include/: deadfuelmoisture.h  dfmcalcstate.h  lfmcalcstate.h  livefuelmoisture.h  nfdrs4.h  nfdrs4calcstate.h  nfdrs4statesizes.h
lib/NFDRS4/src/: deadfuelmoisture.cpp  dfmcalcstate.cpp  lfmcalcstate.cpp  livefuelmoisture.cpp  nfdrs4.cpp  nfdrs4calcstate.cpp
lib/csv_readrow/: CMakeLists.txt
lib/csv_readrow/include/: csv_readrow.h
lib/csv_readrow/src/: csv_readrow.cpp
lib/fw21/: CMakeLists.txt
lib/fw21/include/: fw21.h
lib/fw21/src/: fw21.cpp
lib/time64/: CMakeLists.txt
lib/time64/include/: time64.h  time64_config.h
lib/time64/src/: time64.c
lib/utctime/: CMakeLists.txt
lib/utctime/include/: utctime.h
lib/utctime/src/: utctime.cpp
swig/: Readme.md  nfdrs.i  nfdrs4.i  nfdrs4.py  nfdrs4_wrap.cxx
(+2 files in other folders)
